--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,13 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 //    implementation 'org.springframework.session:spring-session-jdbc'
 
     implementation 'io.asyncer:r2dbc-mysql:1.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.4'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.0'
 
     implementation 'org.flywaydb:flyway-mysql'
 
